--- a/index.html
+++ b/index.html
@@ -47,6 +47,29 @@
             </ul>
         </div>
     </div>
+</nav>
+
+<header>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="intro-text">
+                    <span class="name">Geek Vader</span>
+                    <span class="skills">May the Knowledge be with you</span>
+                    <hr class="star-light">
+                </div>
+                <img class="img-responsive img-bigScreen" src="https://res.cloudinary.com/dasdezine/image/upload/v1458052055/glass_cdjbpa.png" alt="glasses image" title="geek loves glasses">
+            </div>
+        </div>
+        <div class="seeMore-btn text-center btn-style">
+            <div class="btn-styleLine double-line page-scroll">
+                <a href="#portfolio" class="btn btn-lg btn-outline">
+                    <i class="fa fa-fw fa-arrow-circle-down"></i>See More
+                </a>
+            </div>
+        </div>    
+    </div>
+</header>
 
 
 </body>
