--- a/index.html
+++ b/index.html
@@ -71,6 +71,63 @@
     </div>
 </header>
 
+<section id="myLikes">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2>What I Do</h2>
+                <hr class="star-primary">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-4 portfolio-item">
+                <a href="#" class="portfolio-link text-center" data-toggle="modal">
+                    <span class="fa fa-fw fa-headphones" aria-hidden="true" title="This symbolizes I Love to listen good music
+                    "></span>
+                </a>
+                <article class="portfolio-item-One">
+                    <header>
+                        <h3>Listen music</h3>
+                    </header>
+                    <p>
+                        All kind of melodious music because it suits into my ears. Four dollar toast messenger bag green juice, organic cliche tofu synth small batch locavore austin. Squid mlkshk authe ntic pinterest, pour-over gastropub Music seitan sartorial humblebrag. 
+                    </p>
+                </article>                    
+            </div>
+            <div class="col-sm-4 portfolio-item">
+                <a href="#" class="portfolio-link text-center" data-toggle="modal">
+                    <span class="fa fa-fw fa-laptop" aria-hidden="true" title="This symbolizes I Like to design and develop websites
+                    "></span>
+                </a>
+                <article class="portfolio-item-Two">
+                    <header>
+                        <h3>design and develop</h3>
+                    </header>
+                    <p>
+                        I am a front-End designer. I do design and coding of web application. Swag brooklyn banh mi stumptown loca vore yr migas tousled chicharrones sriracha cray leggings. Street art tousled kale chips poutine schlitz. Polaroid roof party austin. 
+                    </p>
+                </article>                    
+            </div>
+            <div class="col-sm-4 portfolio-item">
+                <a href="#" class="portfolio-link text-center" data-toggle="modal">
+                    <span class="fa fa-fw fa-camera-retro" aria-hidden="true" title="This symbolizes I Love to capture moments
+                    "></span>
+                </a>
+                <article class="portfolio-item-Three">
+                    <header>
+                        <h3>photography</h3>
+                    </header>
+                    <p>
+                        I Love to capture beautiful moments. life deep v austin schlitz drinking vinegar, messen ger bag slow-carb. Migas tumblr kombucha you probably hav en't heard of them +1 chicharrones. Tilde wayfarers craft beer stumptown, humblebrag ugh whatever.
+                    </p>
+                </article>                    
+            </div>
+        </div>
+    </div>
+</section>
+<div>
+    <hr class="loc-hr">
+</div>
 
 </body>
 </html>
