--- a/index.html
+++ b/index.html
@@ -129,5 +129,48 @@
     <hr class="loc-hr">
 </div>
 
+<section id="portfolio">
+    <div class="container">        
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2>Portfolio</h2>
+                <hr class="star-primary">
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-3 portfolio-item">
+            <a href="#" class="portfolio-link">                   
+                <img src="https://res.cloudinary.com/dasdezine/image/upload/v1458052402/portfolio_book_y7ypqt.png" class="img-responsive" alt="">
+            </a>
+        </div>
+        <div class="col-sm-3 portfolio-item">
+            <a href="#" class="portfolio-link">                    
+                <img src="https://res.cloudinary.com/dasdezine/image/upload/v1458052400/portfolio_label_e5kv1h.png" class="img-responsive" alt="">
+            </a>
+        </div>
+        <div class="col-sm-3 portfolio-item">
+            <a href="#" class="portfolio-link">                    
+                <img src="https://res.cloudinary.com/dasdezine/image/upload/v1458052404/portfolio_card_xenfuv.png" class="img-responsive" alt="">
+            </a>
+        </div>
+        <div class="col-sm-3 portfolio-item">
+            <a href="#" class="portfolio-link">                    
+                <img src="https://res.cloudinary.com/dasdezine/image/upload/v1458052405/portfolio_mocup_hoxha8.png" class="img-responsive" alt="">
+            </a>
+        </div>            
+    </div>
+    <div class="loadMore-btn text-center btn-style">
+        <div class="btn-styleLine double-line">
+            <a href="#" class="btn btn-lg btn-outline">
+                <i class="fa fa-fw fa-plus"></i>Load More
+            </a>
+        </div>
+    </div>        
+</section>
+<div>
+    <hr class="loc-hr">
+</div>
+
 </body>
 </html>
