--- a/index.html
+++ b/index.html
@@ -278,6 +278,73 @@
     </div>
 </section>
 
+<footer class="text-center">
+    <div class="footer-above">
+        <div class="container">
+            <div class="row">
+                <div class="footer-col col-md-4">
+                    <h3>Location</h3>
+                    <p>63B East Kamalapur<br>Kolata 700028, WB India</p>
+                </div>
+                <div class="footer-col col-md-4">
+                    <h3>Around the Web</h3>
+                    <ul class="list-inline">
+                        <li>
+                            <a href="https://www.behance.net/dasdezine" target="_blank" class="btn-social btn-outline" alt="Behance" title="Behance">
+                                <i class="fa fa-fw fa-behance" aria-hidden="true"></i>
+                                <span class="sr-only">Facebook</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://codepen.io/collection/ABajba/" target="_blank" class="btn-social btn-outline" alt="Codepen" title="Codepen">
+                                <i class="fa fa-fw fa-codepen" aria-hidden="true"></i>
+                                <span class="sr-only">codepen</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://twitter.com/dasdezine" target="_blank" class="btn-social btn-outline" 
+                            alt="Twitter" title="Twitter">
+                                <i class="fa fa-fw fa-twitter" aria-hidden="true"></i>
+                                <span class="sr-only">twitter</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer-col col-md-4">
+                    <h3>Contact Info</h3>
+                    <ul class="list-inline">
+                        <li>
+                            <a href="tel:0091 90 51 314800" class="btn-social btn-outline" alt="My Phone number" 
+                            title="+91 9051314800">
+                                <i class="fa fa-fw fa-phone" aria-hidden="true"></i>
+                                <span class="sr-only">My Phone number</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="mailto:ipabhi@gmail.com" class="btn-social btn-outline" alt="My E-mail ID" 
+                            title="My E-mail ID">
+                                <i class="fa fa-fw fa-envelope" aria-hidden="true"></i>
+                                <span class="sr-only">My E-mail</span>
+                            </a>
+                        </li>
+                    </ul>
+                    <p>If you want to hire me please use phone contact or my E-mail.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="footer-below">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    Artworks created by <a href="https://www.behance.net/annadadej" target="_blank">Anna Dadej</a>
+                    <br>
+                    Copyright &copy; dasdezine 2016
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
 
 </body>
 </html>
