--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="container">
             <div class="navbar-header page-scroll">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
+                    <span class="sr-only">osaijdoasijodaisjd</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -33,13 +33,13 @@
                     <a href="#page-top">Home</a>
                 </li>
                 <li class="page-scroll">
-                    <a href="#myLikes">What I Do</a>
+                    <a href="#mycv">What I Do</a>
                 </li>
                 <li class="page-scroll">
                     <a href="#portfolio">Portfolio</a>
                 </li>
                 <li class="page-scroll">
-                    <a href="#about">About</a>
+                    <a href="#aboutme">About Me</a>
                 </li>
                 <li class="page-scroll">
                     <a href="#contact">Contact</a>
@@ -54,11 +54,11 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="intro-text">
-                    <span class="name">Geek Vader</span>
+                    <span class="name">@RSGAMBOA</span>
                     <span class="skills">May the Knowledge be with you</span>
                     <hr class="star-light">
                 </div>
-                <img class="img-responsive img-bigScreen" src="https://res.cloudinary.com/dasdezine/image/upload/v1458052055/glass_cdjbpa.png" alt="glasses image" title="geek loves glasses">
+                <img class="img-responsive img-bigScreen" src="" alt="glasses image" title="geek loves glasses">
             </div>
         </div>
         <div class="seeMore-btn text-center btn-style">
@@ -71,7 +71,7 @@
     </div>
 </header>
 
-<section id="myLikes">
+<section id="mycv">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
@@ -339,7 +339,7 @@
                 <div class="col-lg-12">
                     Artworks created by <a href="https://www.behance.net/annadadej" target="_blank">Anna Dadej</a>
                     <br>
-                    Copyright &copy; dasdezine 2016
+                    Copyright &copy; rsgamboa
                 </div>
             </div>
         </div>
