--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-left">
                 <li class="page-scroll">
-                    <a href="#page-top">Home</a>
+                    <a href="#home">Home</a>
                 </li>
                 <li class="page-scroll">
-                    <a href="#mycv">What I Do</a>
+                    <a href="#service">Serviços</a>
                 </li>
                 <li class="page-scroll">
                     <a href="#portfolio">Portfolio</a>
                 </li>
                 <li class="page-scroll">
-                    <a href="#aboutme">About Me</a>
+                    <a href="#aboutme">Quem Eu Sou</a>
                 </li>
                 <li class="page-scroll">
-                    <a href="#contact">Contact</a>
+                    <a href="#contato">Contato</a>
                 </li>
             </ul>
         </div>
@@ -54,8 +54,8 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="intro-text">
-                    <span class="name">@RSGAMBOA</span>
-                    <span class="skills">May the Knowledge be with you</span>
+                    <span class="name">@rsgamboa</span>
+                    <span class="skills">Não conheci o outro mundo por querer.</span>
                     <hr class="star-light">
                 </div>
                 <img class="img-responsive img-bigScreen" src="" alt="glasses image" title="geek loves glasses">
@@ -64,7 +64,7 @@
         <div class="seeMore-btn text-center btn-style">
             <div class="btn-styleLine double-line page-scroll">
                 <a href="#portfolio" class="btn btn-lg btn-outline">
-                    <i class="fa fa-fw fa-arrow-circle-down"></i>See More
+                    <i class="fa fa-fw fa-arrow-circle-down"></i>Veja Mais
                 </a>
             </div>
         </div>    
@@ -75,7 +75,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2>What I Do</h2>
+                <h2>Serviços</h2>
                 <hr class="star-primary">
             </div>
         </div>
@@ -87,10 +87,10 @@
                 </a>
                 <article class="portfolio-item-One">
                     <header>
-                        <h3>Listen music</h3>
+                        <h3>Titulo 1</h3>
                     </header>
                     <p>
-                        All kind of melodious music because it suits into my ears. Four dollar toast messenger bag green juice, organic cliche tofu synth small batch locavore austin. Squid mlkshk authe ntic pinterest, pour-over gastropub Music seitan sartorial humblebrag. 
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
                     </p>
                 </article>                    
             </div>
@@ -101,10 +101,10 @@
                 </a>
                 <article class="portfolio-item-Two">
                     <header>
-                        <h3>design and develop</h3>
+                        <h3>Titulo 2</h3>
                     </header>
                     <p>
-                        I am a front-End designer. I do design and coding of web application. Swag brooklyn banh mi stumptown loca vore yr migas tousled chicharrones sriracha cray leggings. Street art tousled kale chips poutine schlitz. Polaroid roof party austin. 
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
                     </p>
                 </article>                    
             </div>
@@ -115,10 +115,10 @@
                 </a>
                 <article class="portfolio-item-Three">
                     <header>
-                        <h3>photography</h3>
+                        <h3>Titulo 3</h3>
                     </header>
                     <p>
-                        I Love to capture beautiful moments. life deep v austin schlitz drinking vinegar, messen ger bag slow-carb. Migas tumblr kombucha you probably hav en't heard of them +1 chicharrones. Tilde wayfarers craft beer stumptown, humblebrag ugh whatever.
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
                     </p>
                 </article>                    
             </div>
@@ -163,7 +163,7 @@
     <div class="loadMore-btn text-center btn-style">
         <div class="btn-styleLine double-line">
             <a href="#" class="btn btn-lg btn-outline">
-                <i class="fa fa-fw fa-plus"></i>Load More
+                <i class="fa fa-fw fa-plus"></i>Veja Mais
             </a>
         </div>
     </div>        
@@ -176,7 +176,7 @@
     <div class="container">            
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2>About me</h2>
+                <h2>Quem Eu Sou</h2>
                 <hr class="star-primary">
             </div>
         </div>
@@ -186,10 +186,10 @@
                 <article class="about-item-One">
                     <header>
                         <h3>75%</h3>
-                        <h3>Photoshop</h3>
+                        <h3>Titulo 4</h3>
                     </header>
                     <p>
-                        Four dollar toast messenger bag green juice, organic cliche tofu synth small batch locavore austin. Squid mlkshk authe ntic pinterest, pour-over gastropub XOXO seitan sartorial humblebrag. 
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
                     </p>
                 </article>   
             </div>
@@ -200,10 +200,10 @@
                 <article class="about-item-Two">
                     <header>
                         <h3>65%</h3>
-                        <h3>Illustrator</h3>
+                        <h3>Titulo 5</h3>
                     </header>
                     <p>
-                        Four dollar toast messenger bag green juice, organic cliche tofu synth small batch locavore austin. Squid mlkshk authe ntic pinterest, pour-over gastropub XOXO seitan sartorial humblebrag. 
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
                     </p>
                 </article>
             </div>
@@ -214,18 +214,18 @@
                 <article class="about-item-Three">
                     <header>
                         <h3>25%</h3>
-                        <h3>Knitting</h3>
+                        <h3>Titulo 6</h3>
                     </header>
                     <p>
-                        Four dollar toast messenger bag green juice, organic cliche tofu synth small batch locavore austin. Squid mlkshk authe ntic pinterest, pour-over gastropub XOXO seitan sartorial humblebrag. 
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
                     </p>
                 </article>
             </div>               
         </div>
         <div class="text-center btn-style double-line">
             <div class="btn-styleLine">
-                <a href="#" class="btn btn-lg btn-outline">
-                    <i class="fa fa-fw fa-download"></i> Download Resume
+                <a href="https://linkedin.com/in/rsgamboa" target="_blank" class="btn btn-lg btn-outline">
+                    <i class="fa fa-fw fa-download"></i> Meu Currículo
                 </a>
             </div>
         </div>
@@ -236,7 +236,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2>Contact Me</h2>
+                <h2>Contato</h2>
                 <hr class="star-primary">
             </div>
         </div>
@@ -252,14 +252,14 @@
                     </div>
                     <div class="row control-group">
                         <div class="form-group col-xs-12 floating-label-form-group controls">
-                            <label>Email Address</label>
+                            <label>Email</label>
                             <input type="email" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
                             <p class="help-block text-danger"></p>
                         </div>
                     </div>
                     <div class="row control-group">
                         <div class="form-group col-xs-12 floating-label-form-group controls">
-                            <label>Message</label>
+                            <label>Messagem</label>
                             <textarea rows="5" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
                             <p class="help-block text-danger"></p>
                         </div>
@@ -268,7 +268,7 @@
                     <div class="contact-btn text-center btn-style">
                         <div class="btn-styleLine double-line page-scroll">
                             <a href="#portfolio" class="btn btn-lg btn-outline">
-                                <i class="fa fa-fw fa-paper-plane"></i>Send
+                                <i class="fa fa-fw fa-paper-plane"></i>Enviar
                             </a>
                         </div>
                     </div>    
@@ -283,26 +283,26 @@
         <div class="container">
             <div class="row">
                 <div class="footer-col col-md-4">
-                    <h3>Location</h3>
-                    <p>63B East Kamalapur<br>Kolata 700028, WB India</p>
+                    <h3>lorem Ipsum</h3>
+                    <p>asdijaosidjoasd<br>asdasdasd, asdasd</p>
                 </div>
                 <div class="footer-col col-md-4">
-                    <h3>Around the Web</h3>
+                    <h3>Sociais</h3>
                     <ul class="list-inline">
                         <li>
-                            <a href="https://www.behance.net/dasdezine" target="_blank" class="btn-social btn-outline" alt="Behance" title="Behance">
+                            <a href="#" target="_blank" class="btn-social btn-outline" alt="Behance" title="Behance">
                                 <i class="fa fa-fw fa-behance" aria-hidden="true"></i>
                                 <span class="sr-only">Facebook</span>
                             </a>
                         </li>
                         <li>
-                            <a href="https://codepen.io/collection/ABajba/" target="_blank" class="btn-social btn-outline" alt="Codepen" title="Codepen">
+                            <a href="#" target="_blank" class="btn-social btn-outline" alt="Codepen" title="Codepen">
                                 <i class="fa fa-fw fa-codepen" aria-hidden="true"></i>
                                 <span class="sr-only">codepen</span>
                             </a>
                         </li>
                         <li>
-                            <a href="https://twitter.com/dasdezine" target="_blank" class="btn-social btn-outline" 
+                            <a href="3" target="_blank" class="btn-social btn-outline" 
                             alt="Twitter" title="Twitter">
                                 <i class="fa fa-fw fa-twitter" aria-hidden="true"></i>
                                 <span class="sr-only">twitter</span>
@@ -311,24 +311,24 @@
                     </ul>
                 </div>
                 <div class="footer-col col-md-4">
-                    <h3>Contact Info</h3>
+                    <h3>Contato</h3>
                     <ul class="list-inline">
                         <li>
-                            <a href="tel:0091 90 51 314800" class="btn-social btn-outline" alt="My Phone number" 
-                            title="+91 9051314800">
+                            <a href="tel:(00) 00000-0000" class="btn-social btn-outline" alt="Telefone" 
+                            title="(00) 00000-0000">
                                 <i class="fa fa-fw fa-phone" aria-hidden="true"></i>
-                                <span class="sr-only">My Phone number</span>
+                                <span class="sr-only">Telefone</span>
                             </a>
                         </li>
                         <li>
-                            <a href="mailto:ipabhi@gmail.com" class="btn-social btn-outline" alt="My E-mail ID" 
+                            <a href="#" class="btn-social btn-outline" alt="My E-mail ID" 
                             title="My E-mail ID">
                                 <i class="fa fa-fw fa-envelope" aria-hidden="true"></i>
-                                <span class="sr-only">My E-mail</span>
+                                <span class="sr-only">Email</span>
                             </a>
                         </li>
                     </ul>
-                    <p>If you want to hire me please use phone contact or my E-mail.</p>
+                    
                 </div>
             </div>
         </div>
@@ -337,7 +337,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    Artworks created by <a href="https://www.behance.net/annadadej" target="_blank">Anna Dadej</a>
+                    asdasd</a>
                     <br>
                     Copyright &copy; rsgamboa
                 </div>
